--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.5.1",
     "firebase": "^11.0.2",
@@ -76,6 +77,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.0.0",
     "react-confetti": "^6.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
@@ -86,6 +88,7 @@
     "react-markdown": "^8.0.7",
     "react-medium-image-zoom": "^5.2.8",
     "react-router": "^6.26.0",
+    "react-swipeable": "^7.0.2",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.12.7",
     "rehype-katex": "^6.0.3",
