--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "react-image-crop": "^11.0.7",
+    "react-intersection-observer": "^9.13.1",
     "react-katex": "^3.0.1",
     "react-latex": "^2.0.0",
     "react-lottie-player": "^2.1.0",
